scrollbar small fixes with items in it

--- a/src/Components/ScrollBar/ScrollBar.css
+++ b/src/Components/ScrollBar/ScrollBar.css
@@ -13,11 +13,9 @@
 
 .scrollbar {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   /* width: 1050px; */
   gap: 20px;
-  margin-top: 5px;
-
   /* overflow: hidden; */
   overflow-y: auto;
 }
@@ -34,11 +32,11 @@
   width: 100px;
 }
 
-.scroll-item- {
-  margin-bottom: 20px;
+.scrollbar-item {
+  margin: 20px 0;
 }
 
-.scrollbar-item {
+.scrollbar-item-content {
   position: relative;
 }
 
@@ -179,7 +177,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  margin-top: 30px;
+  margin-top: 20px;
   color: var(--lt-color-gray-500);
 }
 
